Opened 13 years ago

Closed 12 years ago

#2441 closed defect (fixed)

Program detection in transport stream broken, part 2

Reported by: Carl Eugen Hoyos Owned by:
Priority: important Component: avformat
Version: git-master Keywords: mpegts regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

FFmpeg detects an audio channel that is not part of a program, regression since 4c41fc8.
I will attach the sample from nevcairiel that was announced in ticket #2186

$ ffmpeg -i Pirunpelto_cut.ts
ffmpeg version N-51647-g1177416 Copyright (c) 2000-2013 the FFmpeg developers
  built on Apr  6 2013 18:24:24 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl --disable-indev=jack
  libavutil      52. 25.100 / 52. 25.100
  libavcodec     55.  2.100 / 55.  2.100
  libavformat    55.  1.100 / 55.  1.100
  libavdevice    55.  0.100 / 55.  0.100
  libavfilter     3. 49.100 /  3. 49.100
  libswscale      2.  2.100 /  2.  2.100
  libswresample   0. 17.102 /  0. 17.102
  libpostproc    52.  2.100 / 52.  2.100
[mpeg2video @ 0x341e5a0] Invalid frame dimensions 0x0.
    Last message repeated 4 times
[mpegts @ 0x3419a20] max_analyze_duration 5000000 reached at 5000000 microseconds
[mpegts @ 0x3419a20] PES packet size mismatch
    Last message repeated 1 times
Input #0, mpegts, from 'Pirunpelto_cut.ts':
  Duration: 00:00:06.92, start: 20359.308500, bitrate: 2959 kb/s
  Program 1
    Stream #0:1[0x45]: Video: mpeg2video (Main) ([2][0][0][0] / 0x0002), yuv420p, 720x576 [SAR 64:45 DAR 16:9], 25 fps, 25 tbr, 90k tbn, 50 tbc
    Stream #0:2[0x46](fin): Subtitle: dvb_subtitle ([6][0][0][0] / 0x0006)
    Stream #0:3[0x47](eng): Audio: mp2 ([3][0][0][0] / 0x0003), 48000 Hz, stereo, s16p, 224 kb/s
  No Program
    Stream #0:0[0x44](fin): Audio: mp2 ([3][0][0][0] / 0x0003), 48000 Hz, stereo, s16p, 224 kb/s
At least one output file must be specified

Attachments (1)

Pirunpelto_cut.ts (2.4 MB ) - added by Carl Eugen Hoyos 13 years ago.

Change History (5)

by Carl Eugen Hoyos, 13 years ago

Attachment: Pirunpelto_cut.ts added

comment:1 by Michael Niedermayer, 13 years ago

This file contains 2 different parts (timewise), they have different audio tracks but the same video track

comment:2 by Carl Eugen Hoyos, 13 years ago

But stream 0x44 is a part of program 1, or don't you think so?

comment:3 by Carl Eugen Hoyos, 13 years ago

The sample from ticket #2471 shows the same problem.

comment:4 by Michael Niedermayer, 12 years ago

Reproduced by developer: set
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.