avformat/mpegts: skip updating programs/streams when determining duration

Fixes Ticket2441

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>